2000-09-05  Matthias Andree <matthias.andree@gmx.de>

	* FtpDirList.cc: reformat EPLF even if mtime if absent.

2000-08-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: try PORT if connect fails after fixing
	  pasv address.
	* Http.cc: really skip rest of body from recv_buf; call recv_buf->Do.

2000-08-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix error handling for port-range; bind local address
	  to data socket in passive mode (helps for rare case of routing change).

2000-08-26  Nicolas Noble <nicolas.n.@wanadoo.fr>

	* command.cc: fix N_ for queue help.

2000-08-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h: follow redirections in `cd'.
	* mkdirJob.cc, rmJob.cc: add forgotten plural.
	* module.cc: define RTLD_GLOBAL to 0 if needed.
	* url.cc: set path=/ by default for http urls.
	* CopyJob.cc, pgetJob.cc: move string out of #define to help
	  xgettext to extract it (reported by Nicolas Noble).
	* FileAccess.cc: allow //path (required by posix and needed for
	  novell). Reported by Andreas Quitzow <u042415@xham.dlh.de>.
	* ftpclass.cc, ftpclass.h: fix ssl support (tested on ftpd-tls).

2000-08-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: set *_ssl_connected after SSL_connect.

2000-08-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.h, Fish.h: fix last comma in enum.
	* ResMgr.h: make ResMgr::Resource public.

2000-08-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: fix Seek of FileCopyPeerFDStream. This fixes
	  problem with downloading from REST uncapable servers.

2000-08-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: if server returned address from private network
	  and its own address is not in private network, don't beleave it
	  and use original server address.

2000-08-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: check data port for ftps-data; all_lines